RESOLVED FIXED302685
REGRESSION(302787@main): [macOS Release wk2] fast/files/blob-stream-error.html is a flaky timeout
https://bugs.webkit.org/show_bug.cgi?id=302685
Summary REGRESSION(302787@main): [macOS Release wk2] fast/files/blob-stream-error.htm...
Marta Darbinyan
Reported 2025-11-17 20:55:33 PST
The following test is flaky timeout in EWS and on post-commit bots starting from 302787@main. fast/files/blob-stream-error.html Test history: https://results.webkit.org/?suite=layout-tests&test=fast%2Ffiles%2Fblob-stream-error.html&style=release&flavor=wk2 Test result: https://ews-build.webkit.org/#/builders/137/builds/32373
Attachments
Radar WebKit Bug Importer
Comment 1 2025-11-17 20:56:07 PST
EWS
Comment 2 2025-11-17 21:25:04 PST
Test gardening commit 303166@main (66372566c27e): <https://commits.webkit.org/303166@main> Reviewed commits have been landed. Closing PR #54091 and removing active labels.
youenn fablet
Comment 3 2025-11-18 01:03:59 PST
EWS
Comment 4 2025-11-18 06:06:51 PST
Committed 303180@main (bbf1903f026b): <https://commits.webkit.org/303180@main> Reviewed commits have been landed. Closing PR #54097 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.