Source/WebCore/Modules/streams/StreamTeeUtilities.cpp
@@ -270,8 +270,12 @@ ExceptionOr<Vector<Ref<ReadableStream>>> byteStreamTee(JSDOMGlobalObject& global
     };
 
     Vector<Ref<ReadableStream>> branches;
-    branches.append(ReadableStream::createReadableByteStream(globalObject, WTFMove(pull1Algorithm), WTFMove(cancel1Algorithm), &stream));
-    branches.append(ReadableStream::createReadableByteStream(globalObject, WTFMove(pull2Algorithm), WTFMove(cancel2Algorithm), &stream));
+    branches.append(ReadableStream::createReadableByteStream(globalObject, WTFMove(pull1Algorithm), WTFMove(cancel1Algorithm), {
+        .relatedStreamForGC = &stream
+    }));
+    branches.append(ReadableStream::createReadableByteStream(globalObject, WTFMove(pull2Algorithm), WTFMove(cancel2Algorithm), {
+        .relatedStreamForGC = &stream
+    }));
 
     state->setBranch1(branches[0]);
     state->setBranch2(branches[1]);
